# libvirt-backup-system

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  gate.yml
docs/: backup-consistency.md  commands.md  env-vars.md  install.md  joining-hosts.md  kopia-password.md  kopia.md  manual-restore.md  testing-on-linux.md
libvirt_backup_system/: __init__.py  atomic_io.py  backup.py  backup_cleanup.py  backup_usage.py  chains.py  cleanup.py  cli.py  cli_help.py  cli_parser.py  config.py  config_data.py  config_sync.py  consistency.py  disk_compat.py  disks.py  doctor.py  doctor_kopia.py  doctor_quiesce.py  doctor_units.py  du_args.py  fish_completion.py  inactive_markers.py  installer.py  installer_binaries.py  installer_helpers.py  installer_password.py  installer_uninstall.py  kopia_client.py  kopia_password.py  kopia_repo.py  kopia_snapshots.py  kopia_vendor.py  list_restore_points.py  lock.py  logging_json.py  manifest.py  nbd_probe.py  node_token.py  paths.py  (+24 more)
libvirt_backup_system/data/: libvirt-backup-system.fish
tests/e2e/: __main__.py  docker-compose.yml  mac_safe_case.py  real_kvm_case.py
tests/e2e/fakes/: df  qemu-img  virsh  virtnbdbackup  virtnbdrestore
tests/e2e/qnap/: Dockerfile  entrypoint.sh
tests/e2e/runner/: Dockerfile
tests/unit/: _doctor_helpers.py  _installer_helpers.py  _preflight_helpers.py  conftest.py  restore_helpers.py  test_atomic_io.py  test_backup.py  test_backup_chain_flow.py  test_backup_cleanup.py  test_backup_destination_and_state.py  test_backup_error_boundaries.py  test_backup_inactive_marker.py  test_backup_inactive_marker_failures.py  test_backup_order.py  test_backup_partial_cleanup.py  test_backup_restore.py  test_backup_run.py  test_backup_runtime_safety.py  test_backup_state_recheck.py  test_backup_usage.py  test_backup_verify.py  test_chains.py  test_cli_du.py  test_cli_list_restore_points.py  test_cli_start.py  test_cli_verify_include_hosts.py  test_config.py  test_config_sync.py  test_coverage_gaps.py  test_cross_host_restore_listing.py  test_disk_compat.py  test_disks.py  test_dispatch_check_success.py  test_dispatch_via_systemd.py  test_doctor.py  test_doctor_kopia.py  test_doctor_quiesce.py  test_doctor_runtime_state.py  test_doctor_systemd.py  test_doctor_units.py  (+96 more)
tests/unit/fixtures/: kopia_policy_show_global.json  kopia_repository_status.json  kopia_snapshot_list.json
tools/: gates.py  install_hooks.py
tools/hooks/: pre-push
