[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "libvirt-backup-system"
version = "0.1.0"
description = "Systemd-driven libvirt VM backup orchestrator using virtnbdbackup and rsync."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Vedurstovan"}]
dependencies = []

[project.scripts]
libvirt-backup-system = "libvirt_backup_system.cli:main"

[tool.setuptools]
packages = ["libvirt_backup_system"]
